<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_add_movimento"
          android:title="@string/action_add_movimento"
          android:icon="@drawable/ic_add_white_24dp"
          app:showAsAction="always"/>
    <item android:id="@+id/action_add_movimento_mic"
          android:title="@string/action_add_movimento_mic"
          android:icon="@drawable/ic_mic_white_24dp"
          app:showAsAction="always"/>
    <item android:id="@+id/action_modify"
          android:title="@string/action_modify"
          android:icon="@drawable/ic_mode_edit_white_24dp"
          app:showAsAction="always"/>
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_search_white_24dp"
          app:showAsAction="always"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never" />

</menu>
